LIST OF CHANGES FOR NPG-QC PACKAGE

release 69.2.0
 - the mqc skipper script is changed to always take into account the outcome
   of RoboQC assessment
 - improvements for SeqQC display of the generic results for artic data

release 69.1.0
 - an extension for the npg_mqc_skipper script to make it work for the
   Heron study, ie to take into consideration provisional manual QC
   outcomes from the review autoqc resuls and finalise QC outcomes
   for sequencing and libraries for runs that are expedited to archival

release 69.0.1
 - npg_qc::autoqc::checks::generic::artic - bug fix in a parser for
   artic QC summary for cases when the summary is empty

release 69.0.0
 - npg_qc::autoqc::checks::generic::artic - a proper autoqc check class,
   which repleces bin/npg_autoqc_generic4artic script
 - make pp_name attribute required for the generic check object
 - custom scripts for robo qc and autoqc for outputs of the artic pipeline
   (npg_autoqc_generic4artic and npg_simple_robo4artic) are removed
 - npg_qc::autoqc::checks::review
   - breaking change of the RoboQC section of the product configuration file
   - introduction of the applicability criteria to allow for conditions that
     are based on different LIMS properties

release 68.9
 - DBIx class for the generic table: add missing standard custom relationship
 - SeqQC template simplification and database access optimisation for rna
   autoqc results
 - extension of the SeqQC template for the generic check - a link to
   appliconstats index page for plots is added
 - deployment of the latest version of Catalyst, 5.90128, does not seem
   to include the Starman; the dependency was probably not explicit;
   starman is added to the list of required packages in npg_qc_viewer/Build.PL 

release 68.8.0
 - specialised generic check for ampliconstats

release 68.7.1
 - bug fix for the order of assignment of keys for the doc->{'meta'}
   part of the generic result object for the ncov2019_artic_nf pp

release 68.7.0