@@ -37,6 +37,7 @@ then
 fi
 
 dttag="$(cat latest_processed_plex_list.txt)"
+plex=(qc cgp ddd Minor_v1.0)
 
 #######################################################
 # first check that all required input files are present
@@ -61,7 +62,7 @@ then
 fi
 for zone in ${GTCK_IRODS_ZONE}
 do
-  for qc_set in qc cgp ddd
+  for qc_set in ${plex[*]}
   do
     infile="fluidigm_${qc_set}_${zone}_gt_${dttag}.tsv"
 
@@ -76,11 +77,11 @@ done
 ###########################
 # produce the combined file
 ###########################
-printf "Combining current_sequenom_gt.tsv "; printf "%s " "fluidigm_{qc,cgp,ddd}_{zones}_gt_${dttag}.tsv"; printf "to produce sequenom_fluidigm_combo_sgd_%s.tsv\n" "${dttag}"
+printf "Combining current_sequenom_gt.tsv "; printf "%s " "fluidigm_{qc,cgp,ddd,Minor_v1.0}_{zones}_gt_${dttag}.tsv"; printf "to produce sequenom_fluidigm_combo_sgd_%s.tsv\n" "${dttag}"
 cat ${GTCK_HDR_DATA} <(tail -n +2 ${GTCK_SEQUENOM_GT_DATA} | cut -f2-) > "sequenom_fluidigm_combo_sgd_${dttag}.tsv"
 for zone in ${GTCK_IRODS_ZONE}
 do
-  cat fluidigm_{qc,cgp,ddd}_${zone}_gt_${dttag}.tsv >> "sequenom_fluidigm_combo_sgd_${dttag}.tsv"
+  cat fluidigm_{qc,cgp,ddd,Minor_v1.0}_${zone}_gt_${dttag}.tsv >> "sequenom_fluidigm_combo_sgd_${dttag}.tsv"
 done
 
 ##########################
